--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,7 +5,6 @@ test:
   adapter: async
 
 production:
-  adapter: async
-  # adapter: redis
-  # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  # channel_prefix: popai-sekine_production
+  adapter: redis
+  port: 6379
+  url: <%= ENV["REDIS_URL"] %>
